--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,7 @@ disqusShortname = "xtof"
 
 [Author]
   name = "Christophe Ducamp"
+  site = "https://christopheducamp.com/"
   email = "christophe@ducamp.me"
   facebook = "christophe.ducamp"
   googleplus = "+ChristopheDucamp"
