indiewebification en cours
réglages permaliens AAAA/MM/JJ/nom-post
params ghrepo et ghdocsrepo à régler
partiel page-edit
script webmention hébergé
article h-entry +  div e-content et p-name

--- a/data/jour.yaml
+++ b/data/jour.yaml
@@ -1,7 +1,7 @@
-1: "lundi"
-2: "mardi"
-3: "mercredi"
-4: "jeudi"
-5: "vendredi"
-6: "samedi"
-7: "dimanche"
+Monday: "lundi"
+Tuesday: "mardi"
+Wednesday: "mercredi"
+Thursday: "jeudi"
+Friday: "vendredi"
+Saturday: "samedi"
+Sunday: "dimanche"
