--- a/config.toml
+++ b/config.toml
@@ -7,8 +7,13 @@ DefaultContentLanguage = "fr"
 
 theme = "beautifulhugo"
 metaDataFormat = "yaml"
+
+[permalinks]
+  post = "/:year/:month/:day/:title/"
+
 pygmentsUseClasses = true
 pygmentCodeFences = true
+#pygmentsStyle = "friendly"
 disqusShortname = "xtof"
 #googleAnalytics = "XXX"
 
@@ -21,6 +26,17 @@ disqusShortname = "xtof"
   rss = true
   comments = true
 #  gcse = "012345678901234567890:abcdefghijk" # Revevez votre code à partir de google.com/cse. Assurez-vous d'aller sur "Look and Feel" et de modifier le Layout en "Full Width" et le Theme sur "Classic"
+
+#PARAMS pied de page en cours
+[params]
+  ## repo Gh pour le pied de page (inclure un slash à la fin)
+  ghrepo = "https://github.com/ChristopheDucamp/100daysofcode-site/"
+  ### Editez le repo de contenu (regle pour entrer automatiquement le mode "edit" ;  bien pour des liens "ameliorer cette page")
+  ghdocsrepo = "https://github.com/ChristopheDucamp/100daysofcode-site/tree/master"
+
+
+
+
 
 #[[Params.bigimg]]
 #  src = "img/triangle.jpg"
@@ -55,6 +71,14 @@ disqusShortname = "xtof"
   #vk = "username"
   #paypal = "username"
   #telegram = "username"
+  
+# MARKDOWN
+## Configuration pour le parseur mardown BlackFriday : https://github.com/russross/blackfriday
+[blackfriday]
+  plainIDAnchors = true
+  hrefTargetBlank = true
+  angledQuotes = false
+  latexDashes = true
 
 [[menu.main]]
     name = "Blog"
@@ -74,19 +98,19 @@ disqusShortname = "xtof"
 [[menu.main]]
     parent = "samples"
     name = "Échantillon Grande Image"
-    url = "post/echantillon-bigimg"
+    url = "2017/07/27/échantillon-grande-image/"
     weight = 1
 
 [[menu.main]]
     parent = "samples"
     name = "Échantillon Math"
-    url = "post/echantillon-math"
+    url = "2017/07/27/échantillon-math"
     weight = 2
 
 [[menu.main]]
     parent = "samples"
     name = "Échantillon Code"
-    url = "post/echantillon-code"
+    url = "2017/07/27/échantillon-de-code/"
     weight = 3
 
 [[menu.main]]
