ajout script webmention

--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ disqusShortname = "xtof"
 
 
 [Author]
-  name = "Christophe Ducamp"
+  name = "xtof"
   summary ="coder 1 heure par jour pendant 100 jours. Défi personnel démarré le 24 juillet 2017."
   authorphoto ="/img/avatar-icon.jpg"
   authorurl ="page/a-propos/"
