enableGitInfo + page thanks.md + keybase.txt

--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ metaDataFormat = "yaml"
   post = "/:year/:month/:day/:slug/"
 
 enableRobotsTXT = true
+enableGitInfo = true
 pygmentsUseClasses = true
 pygmentCodeFences = true
 #pygmentsStyle = "friendly"
